DFC-174 pro staff text overlap issue has been fixed

--- a/sites/all/themes/custom/dfc/sass/components/_page-prostaff.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_page-prostaff.scss
@@ -359,6 +359,26 @@ body.node-type-landing-page.section-pro-staff {
       margin: -9px 0;
       padding-right: 80px;
     }
+	
+	@include breakpoint(max-width 589px) {
+      float: left;
+		margin: 0 auto;
+		position: relative;
+		padding-right: 0;
+		clear: both;
+		width: 100%;
+	  }
+	  
+	  @include breakpoint(min-width 590px) {
+		@include breakpoint(max-width 767px){
+			float: none;
+			margin: 0 auto;
+			position: relative;
+			padding-right: 0;
+			clear: both;
+			width: 60%;
+		}
+	  }
   
     .st_twitter_custom,
     .st_facebook_custom {
@@ -429,6 +449,13 @@ body.node-type-landing-page.section-pro-staff {
     margin-bottom: 20px;
     font-family: $dr;
     @include rem(font-size, 17px);
+	
+	
+	@include breakpoint(max-width 589px) {
+		clear: both !important;
+		width: 100% !important;
+		float: left;
+	  }
      
     &:before {
       content: "Category |";
